Fix pdf viewer issue when screen is too small. Reduce height of the pdf viewer to 80% of the container size

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -223,13 +223,14 @@
   left: 0;  
   position: absolute;
   display: block;
+  z-index: 100;
 }
 
 .footer-button-container {
   bottom: -50px;
   left: 0;  
   position: fixed;
-  z-index: 1;
+  z-index: 100;
 }
 
 
